2005-06-24  Sven Neumann  <neumann@jpk.com>

	* app/dialogs/preferences-dialog.c: added a check button to control
	the "display-profile-from-gdk" option.

	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
	fixed use of gdk_property_get(). Return NULL if no display profile
	can be obtained.

2005-06-24  Sven Neumann  <sven@gimp.org>

	Added basic support for the proposed ICC Profiles In X Specification
	(http://burtonini.com/temp/xicc-specification-0.1.html).
	
	* libgimpconfig/gimpcolorconfig.[ch]: added a configuration option
	"display-profile-from-gdk", default to TRUE.

	* modules/cdisplay_lcms.c: try to retrieve the display color
	profile from the "_ICC_PROFILE" property on the default screen.

2005-06-23  Akkana Peck  <akkana@shallowsky.com>

	* app/actions/plug-in-actions.c
	* menus/image-menu.xml.in
	* plug-ins/Lighting/lighting_main.c
	* plug-ins/common/apply_lens.c
	* plug-ins/common/convmatrix.c
	* plug-ins/common/depthmerge.c
	* plug-ins/common/film.c
	* plug-ins/common/flarefx.c
	* plug-ins/common/glasstile.c
	* plug-ins/common/lic.c
	* plug-ins/common/nova.c
	* plug-ins/common/sparkle.c
	* plug-ins/common/vpropagate.c
	* plug-ins/gflare/gflare.c
	* plug-ins/pygimp/doc/pygimp.sgml
	* plug-ins/pygimp/doc/pygimp.html
	* plug-ins/pygimp/doc/structure-of-plugin.html
	* plug-ins/pygimp/plug-ins/clothify.py
	* plug-ins/pygimp/plug-ins/shadow_bevel.py
	* plug-ins/script-fu/script-fu.c
	* plug-ins/script-fu/scripts/clothify.scm
	* plug-ins/script-fu/scripts/drop-shadow.scm
	* plug-ins/script-fu/scripts/erase-rows.scm
	* plug-ins/script-fu/scripts/perspective-shadow.scm
	* plug-ins/script-fu/scripts/predator.scm
	* plug-ins/script-fu/scripts/weave.scm
	* plug-ins/script-fu/scripts/xach-effect.scm: Reorganize
	the Image window's Filters menu, as discussed in bug #116145.

2005-06-23  Tor Lillqvist  <tml@novell.com>

	* app/tools/gimpdrawtool.c (gimp_draw_tool_draw_boundary): Sort
	the boundary so that GIMP_CANVAS_STYLE_XOR drawing (which uses